# extraction-iterator

./: .gitignore  DATA-FIRST-IMPLEMENTATION.md  IMPLEMENTATION-COMPLETE.md  QUICKSTART.md  README.md  START-HERE-DATA-FIRST.md  debug_trace.py  pyproject.toml
configs/: default.yaml
docs/: AZURE-CU-INTEGRATION.md  FEEDBACK-LOOP-GUIDE.md  PRD.md  SKILL_repo_findings.md  architecture.md  autonomous-learning.md  azure-cu-setup.md  cu-feedback-loop.md  customization-guide.md  data-first-extraction.md  persistent-cross-document-learning.md  persistent-learning-faq.md  quickstart-cu.md  workflow-example.md
output/: extract-test-output.xlsx
schemas/: extract-sov.schema.json  output_schema.example.json
src/doc_extract_agentic/: __init__.py  alias_promotion.py  auditor.py  auto_iterator.py  autonomous_learner.py  cli.py  column_mapper.py  config.py  cu_client.py  cu_feedback_loop.py  cu_initialization.py  cu_performance_analyzer.py  data_discovery.py  evaluator.py  example_promoter.py  example_store.py  extractor_performance_analyzer.py  improvement_agent.py  io_utils.py  learn_cli.py  learner.py  llm_improvement.py  local_llm_client.py  mapping_learner.py  models.py  pipeline.py  planner.py  reconciler.py  row_aligner.py  rule_applier.py  rule_cache.py  sheet_serializer.py  table_normalizer.py
src/doc_extract_agentic/extractors/: azure_content_understanding.py  base.py  excel_native.py  llm_native.py  pdf_native.py  registry.py
src/doc_extract_agentic/scripts/: __init__.py  analyze_cu_performance.py  analyze_data.py  auto_iterate.py  bootstrap_examples.py  generate_schema_from_xlsx.py  improve_cu_analyzer.py  learn.py  setup_cu_analyzer.py  setup_env.py  test_cu_config.py
