[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-extract-agentic"
version = "0.1.0"
description = "Starter template for an agentic, self-learning document extraction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "pypdf>=5.0.0",
  "PyYAML>=6.0.0",
  "typer>=0.12.0",
]

[project.scripts]
doc-extract-run = "doc_extract_agentic.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
