[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-extract-agentic"
version = "0.1.0"
description = "Starter template for an agentic, self-learning document extraction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "pypdf>=5.0.0",
  "PyYAML>=6.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
azure = [
  "azure-ai-documentintelligence>=1.0.0",
  "azure-core>=1.30.0",
]

[project.scripts]
doc-extract-run = "doc_extract_agentic.cli:app"
setup-cu-analyzer = "doc_extract_agentic.scripts.setup_cu_analyzer:app"
test-cu-config = "doc_extract_agentic.scripts.test_cu_config:app"
setup-env = "doc_extract_agentic.scripts.setup_env:app"
analyze-cu = "doc_extract_agentic.scripts.analyze_cu_performance:app"
improve-cu = "doc_extract_agentic.scripts.improve_cu_analyzer:app"
analyze-data = "doc_extract_agentic.scripts.analyze_data:app"
doc-extract-auto-iterate = "doc_extract_agentic.scripts.auto_iterate:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
