[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-extract-agentic"
version = "0.1.0"
description = "Starter template for an agentic, self-learning document extraction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "pypdf>=5.0.0",
  "PyYAML>=6.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
foundry = [
  "foundry-local-sdk-winml>=1.0.0",
]

[project.scripts]
doc-extract-run = "doc_extract_agentic.cli:app"
setup-env = "doc_extract_agentic.scripts.setup_env:app"
doc-extract-auto-iterate = "doc_extract_agentic.scripts.auto_iterate:app"
doc-extract-learn = "doc_extract_agentic.scripts.learn:app"
doc-extract-bootstrap-examples = "doc_extract_agentic.scripts.bootstrap_examples:app"
generate-schema-from-xlsx = "doc_extract_agentic.scripts.generate_schema_from_xlsx:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
